force-app/main/default/objects/Square_Transaction__c/Square_Transaction__c.object-meta.xml
<CustomObject>
    <label>Square Transaction</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Square Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Square Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>