force-app/main/default/objects/Square_Transaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Square Transactions</relationshipLabel>
    <relationshipName>Square_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>