force-app/main/default/objects/Square_Transaction__c/fields/Square_Id__c.field-meta.xml
<CustomField>
    <fullName>Square_Id__c</fullName>
    <label>Square Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>