force-app/main/default/objects/Square_Transaction__c/fields/Square_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Square_Receipt__c</fullName>
    <label>Square Receipt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>