force-app/main/default/objects/Square_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>