force-app/main/default/objects/Square_Transaction__c/listViews/April_2026_Transactions.listView-meta.xml
<ListView>
    <fullName>April_2026_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2026</value>
    </filters>
    <filters>
        <field>Payment_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>4/30/2026</value>
    </filters>
    <label>April 2026 Transactions</label>
</ListView>