force-app/main/default/objects/Square_Transaction__c/listViews/May_2026_Transactions.listView-meta.xml
<ListView>
    <fullName>May_2026_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Square_Receipt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month Transactions</label>
</ListView>