force-app/main/default/objects/Square_Transaction__c/listViews/Porch_Party.listView-meta.xml
<ListView>
    <fullName>Porch_Party</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Date__c</field>
        <operation>equals</operation>
        <value>5/16/2026</value>
    </filters>
    <label>Porch Party</label>
</ListView>