force-app/main/default/objects/Square_Transaction__c/listViews/Raffle_Purchase.listView-meta.xml
<ListView>
    <fullName>Raffle_Purchase</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Contact__c</columns>
    <columns>Description__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>Raffle</value>
    </filters>
    <filters>
        <field>Payment_Date__c</field>
        <operation>equals</operation>
        <value>5/16/2026</value>
    </filters>
    <label>Raffle Purchase</label>
</ListView>